--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -140,3 +140,21 @@
     @apply bg-background text-foreground;
   }
 }
+
+.gallery {
+  -webkit-column-count: 3;
+  -moz-column-count: 3;
+  column-count: 3;
+}
+
+.gallery img {
+  -webkit-transition: all 350ms ease;
+  transition: all 350ms ease;
+  cursor: pointer;
+  z-index: 1;
+}
+
+.gallery img:hover {
+  filter: opacity(.8);
+  z-index: 1;
+}
